# idf-app

./: README.md  justfile
.github/workflows/: build.yml
app/: CMakeLists.txt  idf_component.yml
app/examples/get_started/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
app/examples/get_started/main/: idf_component.yml  main.cpp
app/include/: app.hpp  firmware_updater.hpp  httpd.hpp  mqtt.hpp  nvs_config.hpp  provisioner.hpp
app/src/: app.cpp  firmware_updater.cpp  get_info.cpp  httpd.cpp  mqtt.cpp  nvs_config.cpp  nvs_config_web_services.cpp  provisioner.cpp
